menyelesaikan elemen card portofolio dan responsifnya

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:wght@400;500;600;700;800&family=Karma:wght@500;600&family=Padauk:wght@700&display=swap" rel="stylesheet" />
-    <title>Jasa Web Jogja</title>
+    <title>NexaWeb</title>
   </head>
   <body>
     <div id="root"></div>
