perbaikan terhadap link icon dan background agar dapat tampil si hosting

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8" name="description" content="website nexaweb yang merupakan jasa pembuatan website responsif dan modern yang terletak di jogja dan melayani seluruh wilayah indonesia."/>
     <link rel="icon" type="image/svg+xml" href="favicon.io/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
